<resources>
    <string name="app_name">Cine Móvil Plus</string>

    <!--    LoginActivity   -->
    <string name="loggingIn">Iniciando sesión</string>
    <string name="waitAMoment">Esperé un momento</string>
    <string name="youHaveSuccessfullyLoggedIn">¡Has iniciado sesión exitosamente!</string>
    <string name="loginErrorTitle">Error de Inicio de Sesión</string>
    <string name="vale">Vale</string>
    <string name="enterYourEmail">Ingresa tu correo electrónico</string>
    <string name="enterAValidEmail">Ingresa un correo válido</string>
    <string name="enterYourPassword">Ingresa tu contraseña</string>
    <string name="login_error_message">Lo sentimos, no pudimos iniciar sesión con la información proporcionada. Por favor, verifica que la información de inicio de sesión sea correcta y vuelve a intentarlo. Si el problema persiste, asegúrate de que la cuenta esté activa y que la contraseña sea la correcta. Si necesitas ayuda adicional, no dudes en contactarnos. ¡Gracias!</string>
    <string name="contact"><u>Contacto</u></string>
    <string name="email">erwindev98@gmail.com</string>
    <string name="forgotPassword"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="o">o</string>
    <string name="continueWithGoogle">Continuar con Google</string>
    <string name="signGuest">Ingresar como invitado</string>
    <string name="youDoNotHaveAnAccountSignUpHere">¿No tienes cuenta? <u>Regístrate aquí</u></string>
    <string name="logIn">Iniciar sesión</string>
    <string name="eMail">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="api_key">543567228818-tp68g1vldt0h4407h97gqa36i7i1foeg.apps.googleusercontent.com</string>
    <!--    <string name="api_key">543567228818-75pulh30ha9uiohnh3grffhcmut2r701.apps.googleusercontent.com</string>-->

    <!--    Forgot password-->
    <string name="sendingPasswordResetEmail">Enviando correo de Reset de Contraseña</string>
    <string name="forgotPasswordTitle">¿Has olvidado tu contraseña?</string>
    <string name="resetEmailSentAlertTitle">¡Correo de restablecimiento enviado!</string>
    <string name="resetEmailSentAlertMessage">Hemos enviado un correo electrónico con instrucciones para restablecer tu contraseña. Por favor, revisa tu bandeja de entrada.</string>
    <string name="forgot_password_message">Por favor, introduce tu dirección de correo electrónico a continuación. Te enviaremos un correo electrónico con instrucciones para restablecer tu contraseña.</string>
    <string name="sendRestoreEmail">Enviar correo de restablecimiento</string>

    <!--    Register    -->
    <string name="enterYourUsername">Ingresa tu nombre de usuario</string>
    <string name="signUp">Registrarse</string>
    <string name="userName">Nombre de usuario</string>
    <string name="confirmedPassword">Confirmar contraseña</string>
    <string name="passwordLengthWarning">La contraseña debe tener al menos 6 caracteres para garantizar la seguridad de tu cuenta</string>
    <string name="passwordConfirmedWarning">Las contraseñas ingresadas no coinciden. Asegúrate de que ambas contraseñas seas idénticas para continuar</string>
    <string name="registeringUser">Registrando usuario</string>
    <string name="createAccountSuccessfullyMessage">¡Bienvenido a nuestra comunidad! Tu cuenta ha sido creada con éxito.</string>
    <string name="doYouAlreadyHaveAnAccountLogIn">¿Ya tienes cuenta? <u>Inicia sesión</u></string>

    <!--    SignOut-->
    <string name="areYouSureYouWantToLogOut">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="cancel">Cancelar</string>
    <string name="signOut">Cerrar sesión</string>
    <string name="signOutMessage">Has cerrado sesión exitosamente. ¡Esperamos verte pronto de nuevo!</string>

    <string name="streamingPlatforms">Plataformas de streaming</string>
    <string name="genders">Explora por géneros</string>
    <string name="recommendations">Recomendaciones</string>
    <string name="allContent">Todo el contenido</string>
    <string name="moviesAndSeries">Películas y series de</string>
    <string name="whatAreYouLookingFor">¿Qué estás buscando?</string>
    <string name="account">Cuenta</string>
    <string name="favoritesList">Lista de favoritos</string>
    <string name="aviso_legal">Aviso legal</string>
    <string name="licencias_de_c_digo_abierto">Licencias de código abierto</string>
    <string name="userAnonymous">Usuario anonimo</string>

    <!-- BottomNavigationView -->
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="profile">Perfil</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="ver_serie">\u25B6 Ver serie</string>
    <string name="ver_pelicula">\u25B6 Ver película</string>
    <string name="trailer">Tráiler</string>
    <string name="reviews">Reseñas</string>
    <string name="myList">Mi lista</string>
    <string name="comments">Comentarios</string>
    <string name="duration">Duración:</string>
    <string name="director">Director:</string>
    <string name="releaseDate">\uD83D\uDCC5</string>
    <string name="classification">Clasificación:</string>
    <string name="producerList">Lista de productoras:</string>
    <string name="distribution">Distribución:</string>
    <string name="synopsis">Sinopsis</string>
    <string name="CineMovilPlusNews">Novedades de Cine Móvil Plus</string>
    <string name="exploreOurCollections">Explora nuestras colecciones</string>

    <!--  Arrays  -->
    <string name="classicsCinemaTv">Clásicos del Cine y la TV</string>
    <string name="retroCinemaSeries">Retro Cinema y Series</string>
    <string name="pastJewels">Joyas del Pasado</string>
    <string name="cinemaTvIcons">Íconos del Cine y la Televisión</string>
    <string name="cinematicMemories">Memorias Cinematográficas</string>
    <string name="goldenAgeCinemaTv">Época Dorada del Cine y la TV</string>
    <string name="vintageCinemaSeries">Vintage Cinema y Series</string>
    <string name="screenMemories">Recuerdos en Pantalla</string>
    <string name="oldCinemaSeries">Cine y Series Antiguas</string>
    <string name="screenHistory">Historia en la Pantalla</string>
</resources>