<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.login.LoginActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/TextViewsLinks"
        android:layout_marginTop="27.5dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textSize="27.5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="16dp"
        app:cardBackgroundColor="@color/dark_transparent"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                style="@style/TextViewsLinks"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/logIn"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/EditTextInput"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/eMail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/EditTextInput"
                    android:drawableStart="@drawable/ic_password"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/logIn"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tvForgotPassword"
                style="@style/TextViewsLinks"
                android:layout_marginTop="12dp"
                android:text="@string/forgotPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvRegister" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MaterialDivider"
                    app:dividerColor="@color/white" />

                <TextView
                    style="@style/TextViewsLinks"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/o" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MaterialDivider"
                    app:dividerColor="@color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLoginWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_btn_white"
                android:drawableStart="@drawable/ic_google"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:text="@string/continueWithGoogle"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_btn_white"
                android:drawableStart="@drawable/ic_guest"
                android:drawablePadding="8dp"
                android:drawableTint="@color/black"
                android:padding="8dp"
                android:text="@string/signGuest"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvSignUp"
        style="@style/TextViewsLinks"
        android:layout_marginTop="8dp"
        android:text="@string/youDoNotHaveAnAccountSignUpHere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>